--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,11 +15,16 @@ add_executable(${GAME_PROJECT_NAME}
 
 	src/Game.hpp
 	src/Game.cpp
-	
+
 )
 
 add_subdirectory(Engine)
 target_link_libraries(${GAME_PROJECT_NAME} Engine)
+
+add_custom_command(TARGET ${GAME_PROJECT_NAME} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+                ${CMAKE_CURRENT_SOURCE_DIR}/assets
+                $<TARGET_FILE_DIR:${GAME_PROJECT_NAME}>/assets)
 
 # set(CMAKE_SUPPRESS_REGENERATION ON)
 
