Added DevIL lib

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -1,5 +1,5 @@
-# ----- src -----
-# Engine
+cmake_minimum_required(VERSION 3.22 FATAL_ERROR)
+
 set(ENGINE_PROJECT_NAME Engine)
 project(${ENGINE_PROJECT_NAME})
 
@@ -31,34 +31,44 @@ add_library(${ENGINE_PROJECT_NAME} STATIC
 	src/Utils/Logger.cpp
 	src/Utils/FileSystem.hpp
 	src/Utils/FileSystem.cpp
-	
 )
 target_include_directories(${ENGINE_PROJECT_NAME} PUBLIC src)
 
-# ----- deps -----
+
 # glfw
 set(GLFW_BUILD_DOCS 	OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS 	OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 
 add_subdirectory(deps/glfw)
-target_link_libraries(${ENGINE_PROJECT_NAME} glfw)
+target_link_libraries(${ENGINE_PROJECT_NAME} PUBLIC glfw)
 
 # glm
 add_subdirectory(deps/glm)
-target_link_libraries(${ENGINE_PROJECT_NAME} glm)
+target_link_libraries(${ENGINE_PROJECT_NAME} PUBLIC glm)
 
 # glad
-############
-add_library(glad STATIC 
+# --------------------
+add_library(glad STATIC
 	deps/glad/include/glad/glad.h 
 	deps/glad/src/glad.c
 )
 target_include_directories(glad PUBLIC deps/glad/include)
-############
-target_link_libraries(${ENGINE_PROJECT_NAME} glad)
+# --------------------
+target_link_libraries(${ENGINE_PROJECT_NAME} PUBLIC glad)
 
+# DevIL
+cmake_path(SET IL_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/deps/DevIL/include")
+cmake_path(SET IL_LIBRARIES "${CMAKE_CURRENT_SOURCE_DIR}/deps/DevIL/lib/x64/Release/DevIL.lib")
+cmake_path(SET ILU_LIBRARIES "${CMAKE_CURRENT_SOURCE_DIR}/deps/DevIL/lib/x64/Release/ILU.lib")
+cmake_path(SET ILUT_LIBRARIES "${CMAKE_CURRENT_SOURCE_DIR}/deps/DevIL/lib/x64/Release/ILUT.lib")
+find_package(DevIL)
+message("-- DevIL_FOUND: ${DevIL_FOUND}")
+message("-- DevIL_ILUT_FOUND: ${DevIL_ILUT_FOUND}")
+target_link_libraries(${ENGINE_PROJECT_NAME} PUBLIC DevIL::IL DevIL::ILU DevIL::ILUT)
 
-
-
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/deps/DevIL/lib/x64/Release/DevIL.dll
+	${CMAKE_CURRENT_SOURCE_DIR}/deps/DevIL/lib/x64/Release/ILU.dll
+	${CMAKE_CURRENT_SOURCE_DIR}/deps/DevIL/lib/x64/Release/ILUT.dll
+	DESTINATION ${CMAKE_BINARY_DIR}/Debug)
 
