Added texture loading and rendering

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -26,6 +26,10 @@ add_library(${ENGINE_PROJECT_NAME} STATIC
 	src/Graphics/Vertex.cpp
 	src/Graphics/ElementArrayBuffer.hpp
 	src/Graphics/ElementArrayBuffer.cpp
+	src/Graphics/Texture2D.hpp
+	src/Graphics/Texture2D.cpp
+	src/Graphics/Image.hpp
+	src/Graphics/Image.cpp
 	
 	src/Utils/Logger.hpp
 	src/Utils/Logger.cpp
